# rust-rng-benchmarking

./: Cargo.toml  README.md
src/: bench.rs  chance_simulator.rs  fastrand.rs  pcg.rs  smallrng.rs  xorshift.rs
